--- a/services/IT-architecture-design.html
+++ b/services/IT-architecture-design.html
@@ -63,29 +63,32 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Technology and Architecture
+              IT Architecture & Design
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Technology and Architecture?
+                What is IT Architecture & Design?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                IT Architecture & Design services helps your organisation design and construct IT solutions guided by IT
+                principles and guidelines.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Technology and Architecture?
+                Why Five Eyes IT Architecture & Design?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting has experienced Solution Architects and engineers that can provide end to end
+                architecture advice, design and services to support the implementation and maintenance of your
+                technology solutions. We are well versed and have had continuous success designing solutions for
+                Government and private sector clients.
+
               </p>
             </div>
 
@@ -111,7 +114,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We develop, implement and customise commercial of the shelf solutions through our technology partners and our expertise creating value for your organisation
+                  We develop, implement and customise commercial of the shelf solutions through our technology partners
+                  and our expertise creating value for your organisation
                 </p>
                 <a class="categories__grid__button" href="./software-technology.html">Learn More</a>
               </div>
@@ -147,7 +151,7 @@
 
           </section>
 
-          
+
 
 
 
