--- a/services/IT-assessment-analysis.html
+++ b/services/IT-assessment-analysis.html
@@ -63,29 +63,29 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Technology and Architecture
+              IT Assessment & Analysis
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Technology and Architecture?
+                What is IT Assessment & Analysis?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Our IT Assessment & Analysis service helps your organisation discover what technologies in the market
+                would best suit your organisations and fulfil the requirements sought.
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Technology and Architecture?
+                Why Five Eyes IT Assessment & Analysis?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting has skilled IT professionals that can successfully translate your business
+                requirements into technology solutions that best fit and integrate with your organisations’ enterprise
+                architecture through scoping studies and options papers.
               </p>
             </div>
 
@@ -111,7 +111,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We develop, implement and customise commercial of the shelf solutions through our technology partners and our expertise creating value for your organisation
+                  We develop, implement and customise commercial of the shelf solutions through our technology partners
+                  and our expertise creating value for your organisation
                 </p>
                 <a class="categories__grid__button" href="./software-technology.html">Learn More</a>
               </div>
@@ -147,7 +148,7 @@
 
           </section>
 
-          
+
 
 
 
