--- a/technology.html
+++ b/technology.html
@@ -124,7 +124,7 @@
                     We guide and support your organisation build and embed fit for purpose technology solutions and automated practices
 
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/IT-advisory.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -136,7 +136,7 @@
                   <p class="categories__grid__label">
                     We are skilled at translating business requirements into technology solutions that best fit and integrate with your organisations enterprise architecture
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/IT-assessment-analysis.html">Learn More</a>
                 </div>
 
               </div>
@@ -153,7 +153,7 @@
                   <p class="categories__grid__label">
                     We provide end to end architecture advice and design services to support the implementation and maintenance of your technology solutions
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/IT-architecture-design.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -165,7 +165,7 @@
                   <p class="categories__grid__label">
                     We will support your organisation to implement new technologies and solutions and ensure they integrate with existing systems
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/IT-solution-integration.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -176,7 +176,7 @@
                   <p class="categories__grid__label">
                     We support the delivery of your technology solutions by developing, testing and deploying solutions aligned to industry best practice
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/technology-development-testing.html">Learn More</a>
                 </div>
 
 
@@ -193,7 +193,7 @@
                   <p class="categories__grid__label">
                     We provide a comprehensive range of ITIL based services to support your organisation
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/service-integration-management.html">Learn More</a>
                 </div>
 
               </div>
@@ -209,7 +209,7 @@
                   <p class="categories__grid__label">
                     We design, integrate and install hardware to support your organisation needs
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/hardware-technology.html">Learn More</a>
                 </div>
 
 
@@ -221,7 +221,7 @@
                   <p class="categories__grid__label">
                     We develop, implement and customise commercial of the shelf solutions through our technology partners and our expertise creating value for your organisation
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/software-technology.html">Learn More</a>
                 </div>
 
 
@@ -233,7 +233,7 @@
                   <p class="categories__grid__label">
                     We design, develop and maintain cloud solutions that transform your organisation
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/cloud-technology.html">Learn More</a>
                 </div>
 
               </div>
