--- a/services/service-integration-management.html
+++ b/services/service-integration-management.html
@@ -63,29 +63,31 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Technology and Architecture
+              Service Integration & Management
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Technology and Architecture?
+                What is Service Integration & Management?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Service Integration and Management (SIAM) is an approach to managing multiple suppliers of services
+                (business services as well as information technology services) and integrating them to provide a single
+                business-facing IT organisation
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Technology and Architecture?
+                Why Five Eyes Service Integration & Management?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting provides a comprehensive range of ITIL based services to support your organisation.
+                This includes Software License and Asset Management, 24/7 Service Desk, 24/7 Network and Operations
+                Monitoring, Configuration and Asset Management and Incident, Problem and Change Management.
+
               </p>
             </div>
 
@@ -111,7 +113,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We develop, implement and customise commercial of the shelf solutions through our technology partners and our expertise creating value for your organisation
+                  We develop, implement and customise commercial of the shelf solutions through our technology partners
+                  and our expertise creating value for your organisation
                 </p>
                 <a class="categories__grid__button" href="./software-technology.html">Learn More</a>
               </div>
@@ -147,7 +150,7 @@
 
           </section>
 
-          
+
 
 
 
