--- a/services/cloud-technology.html
+++ b/services/cloud-technology.html
@@ -63,29 +63,30 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Technology and Architecture
+              Cloud Technology
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Technology and Architecture?
+                What is Cloud Technology?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Our Cloud Technology service helps your organisation implement cloud products to support your business
+                operate and store resources.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Technology and Architecture?
+                Why Five Eyes Cloud Technology?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Through our partnerships with leading cloud vendors such as AWS and Microsoft we help you design,
+                develop and maintain cloud solutions that transform your organisation.
+
               </p>
             </div>
 
@@ -100,7 +101,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide end to end architecture advice and design services to support the implementation and maintenance of your technology solutions
+                  We provide end to end architecture advice and design services to support the implementation and
+                  maintenance of your technology solutions
                 </p>
                 <a class="categories__grid__button" href="./IT-architecture-design.html">Learn More</a>
               </div>
@@ -112,7 +114,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We will support your organisation to implement new technologies and solutions and ensure they integrate with existing systems
+                  We will support your organisation to implement new technologies and solutions and ensure they
+                  integrate with existing systems
                 </p>
                 <a class="categories__grid__button" href="./IT-solution-integration.html">Learn More</a>
               </div>
@@ -123,7 +126,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We support the delivery of your technology solutions by developing, testing and deploying solutions aligned to industry best practice
+                  We support the delivery of your technology solutions by developing, testing and deploying solutions
+                  aligned to industry best practice
                 </p>
                 <a class="categories__grid__button" href="./technology-development-testing.html">Learn More</a>
               </div>
@@ -135,7 +139,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We guide and support your organisation build and embed fit for purpose technology solutions and automated practices
+                  We guide and support your organisation build and embed fit for purpose technology solutions and
+                  automated practices
 
                 </p>
                 <a class="categories__grid__button" href="./IT-advisory.html">Learn More</a>
@@ -150,7 +155,7 @@
 
           </section>
 
-          
+
 
 
 
