--- a/services/hardware-technology.html
+++ b/services/hardware-technology.html
@@ -63,29 +63,32 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Technology and Architecture
+
+              Hardware Technology
+
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Technology and Architecture?
+                What is Hardware Technology?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Our hardware technology service helps your organisation procure and implement physical IT components.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Technology and Architecture?
+                Why Five Eyes Hardware Technology?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting works with reputable IT companies that product hardware technology products to
+                design, integrate and install hardware to support your organisation needs. This includes enterprise
+                storage, network infrastructure, end user computing and enterprise computing.
+
               </p>
             </div>
 
@@ -100,7 +103,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide end to end architecture advice and design services to support the implementation and maintenance of your technology solutions
+                  We provide end to end architecture advice and design services to support the implementation and
+                  maintenance of your technology solutions
                 </p>
                 <a class="categories__grid__button" href="./IT-architecture-design.html">Learn More</a>
               </div>
@@ -112,7 +116,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We will support your organisation to implement new technologies and solutions and ensure they integrate with existing systems
+                  We will support your organisation to implement new technologies and solutions and ensure they
+                  integrate with existing systems
                 </p>
                 <a class="categories__grid__button" href="./IT-solution-integration.html">Learn More</a>
               </div>
@@ -123,7 +128,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We support the delivery of your technology solutions by developing, testing and deploying solutions aligned to industry best practice
+                  We support the delivery of your technology solutions by developing, testing and deploying solutions
+                  aligned to industry best practice
                 </p>
                 <a class="categories__grid__button" href="./technology-development-testing.html">Learn More</a>
               </div>
@@ -135,7 +141,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We guide and support your organisation build and embed fit for purpose technology solutions and automated practices
+                  We guide and support your organisation build and embed fit for purpose technology solutions and
+                  automated practices
 
                 </p>
                 <a class="categories__grid__button" href="./IT-advisory.html">Learn More</a>
@@ -150,7 +157,7 @@
 
           </section>
 
-          
+
 
 
 
