--- a/project_delivery.html
+++ b/project_delivery.html
@@ -107,7 +107,7 @@
                   <p class="categories__grid__label">
                     We develop business cases aligned to strategic objectives with clearly defined scope and objectives aimed to senior executive decision makers
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/business-case-development.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -118,7 +118,7 @@
                   <p class="categories__grid__label">
                     We develop detailed and fit for purpose business and technical requirements for your organisations’ programmes and projects
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/requirement-development.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -129,7 +129,7 @@
                   <p class="categories__grid__label">
                     We provide advice, conduct assessments and deliver solutions that equip you to realise sustained business value and improvement
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/business-strategy.html">Learn More</a>
                 </div>
 
               </div>
@@ -146,7 +146,7 @@
                   <p class="categories__grid__label">
                     We provide independent project and programme assessments, advice and recommendations based on industry best practice and methodologies
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/project-assurance.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -157,7 +157,7 @@
                   <p class="categories__grid__label">
                     We deliver and manage your programmes and projects ensuring they meet scope, schedule and budget
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/portfolio-programme.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -168,7 +168,7 @@
                   <p class="categories__grid__label">
                     We provide PMO services that helps your organisation define and maintain standards for your projects and programmes
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/portfolio-programme-office.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -180,7 +180,7 @@
                   <p class="categories__grid__label">
                     We plan, design and deliver government procurements and manage your commercials
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/commercial-procurement.html">Learn More</a>
                 </div>
 
 
@@ -193,7 +193,7 @@
                   <p class="categories__grid__label">
                     We help you realise your benefits through our experience in all aspects of benefits management
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/benefits-management.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -204,7 +204,7 @@
                   <p class="categories__grid__label">
                     We provide change managers with strong experience leading seamless organisational, cultural and technological-enabled change ensuring your transformation succeeds
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/change-management.html">Learn More</a>
                 </div>
 
 
