--- a/services/benefits-management.html
+++ b/services/benefits-management.html
@@ -63,29 +63,29 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Project Delivery
+              Benefits Management
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Project Delivery?
+                What is Benefits Management?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Benefits Management is the identification, definition, planning, tracking and realisation of benefits.
+                It ensures that benefits are realised in which are derived from your project and business outputs and
+                outcomes.
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Project Delivery?
+                Why Five Eyes Benefits Management?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                At Five Eyes, we help you realise your benefits through our experience in all aspects of benefits management - from initial identification and quantification through to working with executives to drive effective benefits realisation.
+
               </p>
             </div>
 
@@ -100,7 +100,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide independent project and programme assessments, advice and recommendations based on industry best practice and methodologies
+                  We provide independent project and programme assessments, advice and recommendations based on industry
+                  best practice and methodologies
                 </p>
                 <a class="categories__grid__button" href="./project-assurance.html">Learn More</a>
               </div>
@@ -137,7 +138,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide change managers with strong experience leading seamless organisational, cultural and technological-enabled change ensuring your transformation succeeds
+                  We provide change managers with strong experience leading seamless organisational, cultural and
+                  technological-enabled change ensuring your transformation succeeds
                 </p>
                 <a class="categories__grid__button" href="./change-management.html">Learn More</a>
               </div>
@@ -153,7 +155,7 @@
 
           </section>
 
-          
+
 
 
 
