--- a/services/business-strategy.html
+++ b/services/business-strategy.html
@@ -69,7 +69,7 @@
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Business Case Development?
+                What is Business Strategy?
 
               </p>
 
@@ -79,14 +79,12 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Business Case Development?
+                Why Five Eyes Business Strategy?
 
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Business Strategy services helps your organisation formulate and implement initiatives, plans and goals
-                you desire to create sustained success and maintain a competitive advantage.
-
+                Five Eyes Consulting applies proven methodologies to deliver advice, assessments and solutions that equip you to realise sustained business value and improvement. Our expertise includes strategy development and reviews, operating model design, organisation structure design, governance and risk frameworks and advice and process improvement
               </p>
             </div>
 
