--- a/services/commercial-procurement.html
+++ b/services/commercial-procurement.html
@@ -63,29 +63,31 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Project Delivery
+              Commercial & Procurement
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Project Delivery?
+                What is Commercial & Procurement?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Commercial and procurement services helps you manage your financials and acquire good, services and work
+                from external sources.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Project Delivery?
+                Why Five Eyes Commercial & Procurement?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting has commercial and procurement professionals with experience in planning, designing
+                and delivering government procurements as well as managing commercials, across the vast majority of
+                Federal and State Government agencies.
+
               </p>
             </div>
 
@@ -100,7 +102,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide independent project and programme assessments, advice and recommendations based on industry best practice and methodologies
+                  We provide independent project and programme assessments, advice and recommendations based on industry
+                  best practice and methodologies
                 </p>
                 <a class="categories__grid__button" href="./project-assurance.html">Learn More</a>
               </div>
@@ -137,7 +140,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide change managers with strong experience leading seamless organisational, cultural and technological-enabled change ensuring your transformation succeeds
+                  We provide change managers with strong experience leading seamless organisational, cultural and
+                  technological-enabled change ensuring your transformation succeeds
                 </p>
                 <a class="categories__grid__button" href="./change-management.html">Learn More</a>
               </div>
@@ -153,7 +157,7 @@
 
           </section>
 
-          
+
 
 
 
