--- a/services/security-analysis-review.html
+++ b/services/security-analysis-review.html
@@ -63,7 +63,7 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Advisory
+              Security Analysis & Review (change from discovery and assessment)
             </h1>
 
             <div class="service__info">
