--- a/services/portfolio-programme-office.html
+++ b/services/portfolio-programme-office.html
@@ -63,29 +63,24 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Project Delivery
+              Portfolio, Programme & Project Management Office Services
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Project Delivery?
+                What is Portfolio, Programme & Project Management Office Services?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                PMO services helps you improve the management of your projects and programmes by standardising processes and improving efficiency
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Project Delivery?
+                Why Five Eyes Portfolio, Programme & Project Management Office Services?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting provides PMO services including reviews of existing processes, design and implementation of frameworks and methodologies, tools and templates, data gathering and analysis, project and program controls, benefits realisation, risk and issues management, master scheduling, stakeholder engagement, secretariat, and executive reporting
               </p>
             </div>
 
