--- a/services/project-assurance.html
+++ b/services/project-assurance.html
@@ -63,29 +63,24 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Project Delivery
+              Project Assurance
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Project Delivery?
+                What is Project Assurance?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Project Assurance services seek to provide your organisation with an independent and objective oversight of your projects ensuring they are delivering quality outputs and results aligned to best practice
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Project Delivery?
+                Why Five Eyes Project Assurance?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting ensures your organisations’ programmes and projects achieve quality outcomes by providing independent assessments and advice based on industry best practice and methodologies
               </p>
             </div>
 
