--- a/services/portfolio-programme.html
+++ b/services/portfolio-programme.html
@@ -63,29 +63,24 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Project Delivery
+              Portfolio, Programme & Project Management
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Project Delivery?
+                What is Portfolio, Programme & Project Management?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Our Portfolio, Programme and Project Management service helps your organisation deliver value through the use of specific knowledge, skills, tools and techniques
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Project Delivery?
+                Why Five Eyes Portfolio, Programme & Project Management?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting leverages extensive programme and project management expertise to deliver and manage your programmes and projects end to end ensuring they meet scope, schedule and budget. Our team has qualifications in PRINCE2®, PMBOK®, PMP®, P3O®, P3M3®, PRINCE2 Agile® and MSP®
               </p>
             </div>
 
