--- a/services/security-architecture-design.html
+++ b/services/security-architecture-design.html
@@ -63,29 +63,24 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Advisory
+              Security Architecture Design & Build
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Advisory?
+                What is Security Architecture Design & Build?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Our Security Architecture service ensures that your software products and capabilities have been designed to be foundationally secure
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Advisory?
+                Why Five Eyes Security Architecture Design & Build?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting has a capability of Security professionals who are solution architects enabling us to provide end to end architecture advice, design and build service to support the implementation and maintenance of your security systems and secure them by design
               </p>
             </div>
 
