--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     to private and public sector organisations of all sizes.
                   <div data-animation="paragraph" class="services__grid__item__link">
                     <b>
-                      <a href="#.">Learn more</a>
+                      <a href="cyber_security.html">Learn more</a>
                     </b>
                   </div>
                   </p>
@@ -159,7 +159,7 @@
                     maintenance of enterprise ICT systems across the whole project lifecycle.
                   <div data-animation="paragraph" class="services__grid__item__link">
                     <b>
-                      <a href="#.">Learn more</a>
+                      <a href="technology.html">Learn more</a>
                     </b>
                   </div>
                   </p>
@@ -186,7 +186,7 @@
                     experience managing and delivering enterprise solutions across the whole project lifecycle.
                   <div data-animation="paragraph" class="services__grid__item__link">
                     <b>
-                      <a href="#.">Learn more</a>
+                      <a href="project_delivery.html">Learn more</a>
                     </b>
                   </div>
                   </p>
