--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="./css/index.css" />
 </head>
 
-<body>
+<body class="aboutus">
   <div class="noise"></div>
 
   <div data-barba="wrapper">
