--- a/careers.html
+++ b/careers.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="./css/index.css" />
 </head>
 
-<body>
+<body class="aboutus">
   <div class="noise"></div>
 
   <div data-barba="wrapper">
@@ -518,19 +518,14 @@
 
         <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
           data-animation="paragraph">contact@fiveeyes.com.au</a>
+
+        <br><br>
+        <a href="./">
+          <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
+        </a>
+
       </div>
 
-      <div class="footer__partners">
-        <p class="footer__title" data-animation="paragraph">
-          Partners
-        </p>
-
-        <div class="footer__images__grid">
-          <img class="footer__images__grid__image" src="./assets/cisco.png" alt="Cisco" crossorigin="anonymous" />
-          <img class="footer__images__grid__image" src="./assets/microsoft.png" alt="Cisco" crossorigin="anonymous" />
-          <img class="footer__images__grid__image" src="./assets/amazon.png" alt="Cisco" crossorigin="anonymous" />
-        </div>
-      </div>
 
     </div>
   </footer>
