--- a/technology.html
+++ b/technology.html
@@ -399,7 +399,6 @@
           </section>
 
 
-
           <footer class="footer">
             <div class="footer__information">
               <div class="footer__location">
@@ -442,22 +441,14 @@
 
                 <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
                   data-animation="paragraph">contact@fiveeyes.com.au</a>
+
+                <br><br>
+                <a href="./">
+                  <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
+                </a>
+
               </div>
 
-              <div class="footer__partners">
-                <p class="footer__title" data-animation="paragraph">
-                  Partners
-                </p>
-
-                <div class="footer__images__grid">
-                  <img class="footer__images__grid__image" src="./assets/cisco.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/microsoft.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/amazon.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                </div>
-              </div>
 
             </div>
           </footer>
