--- a/aboutus.html
+++ b/aboutus.html
@@ -69,7 +69,8 @@
               <div>based sovereign</div>
               <div>consultancy</div>
               <div>
-                <span>for cyber security</span>
+                <!-- <span>for cyber security</span> -->
+                <span>for INFORMATION SECURITY & IT</span>
               </div>
             </h1>
 
@@ -173,15 +174,15 @@
 
           <section class="reasons">
             <h4 class="reasons__title background__title" data-animation="paragraph">
-              <span>03.</span>Our services & reasons:
+              <span>03.</span>Our Skills & Experience:
             </h4>
 
-            <h3 class="reasons__label" data-animation="paragraph">
+            <!-- <h3 class="reasons__label" data-animation="paragraph">
               At Five Eyes Consulting, we understand that cyber risks are
               imminent. With threats becoming more technical and advanced,
               Five Eyes Consulting has developed effective and highly
               comprehensive risk management services:
-            </h3>
+            </h3> -->
 
             <div class="reasons__grid">
               <div class="reasons__grid__item">
@@ -437,6 +438,10 @@
               <!-- 9 -->
               <div class="item">
                 <img src="./assets/Tenable_Logo.jpg" alt="Tenable" />
+              </div>
+              <!-- 10 -->
+              <div class="item">
+                <img src="./assets/s1-logo-color.svg" alt="sentinel one" />
               </div>
 
             </div>
