--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                   </p>
                 </div>
 
-                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas" src="lotties/CyberSecurity.json" background="transparent"
-                    speed="1" loop autoplay>
+                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas"
+                  src="lotties/CyberSecurity.json" background="transparent" speed="1" loop autoplay>
                 </lottie-player>
 
                 <!-- <canvas class="services__grid__item__canvas" id="cyber__sec__canvas"></canvas> -->
@@ -165,12 +165,12 @@
                   </p>
                 </div>
 
-                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas" src="lotties/Technology.json" background="transparent"
-                    speed="1" loop autoplay>
+                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas"
+                  src="lotties/Technology.json" background="transparent" speed="1" loop autoplay>
                 </lottie-player>
 
                 <!-- <canvas class="services__grid__item__canvas" id="network__serv__canvas"></canvas> -->
-                
+
 
                 <span class="services__grid__item__line"></span>
               </div>
@@ -192,8 +192,8 @@
                   </p>
                 </div>
 
-                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas" src="lotties/ProjectDelivery.json" background="transparent"
-                    speed="1" loop autoplay>
+                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas"
+                  src="lotties/ProjectDelivery.json" background="transparent" speed="1" loop autoplay>
                 </lottie-player>
 
 
@@ -204,8 +204,7 @@
             </div>
           </section>
 
-
-          <!-- partners slider -->
+          <!-- Partners slider -->
           <section class="background bg-white">
             <div class="services__title__wrapper">
               <hi class="services__title" data-animation="title">Partners</hi>
@@ -246,6 +245,10 @@
               <!-- 9 -->
               <div class="item">
                 <img src="./assets/Tenable_Logo.jpg" alt="Tenable" />
+              </div>
+              <!-- 10 -->
+              <div class="item">
+                <img src="./assets/s1-logo-color.svg" alt="sentinel one" />
               </div>
 
             </div>
