--- a/news.html
+++ b/news.html
@@ -181,7 +181,7 @@
             </div>
           </section>
 
-          <!-- partners slider -->
+          <!-- Partners slider -->
           <section class="background bg-white">
             <div class="services__title__wrapper">
               <hi class="services__title" data-animation="title">Partners</hi>
@@ -222,6 +222,10 @@
               <!-- 9 -->
               <div class="item">
                 <img src="./assets/Tenable_Logo.jpg" alt="Tenable" />
+              </div>
+              <!-- 10 -->
+              <div class="item">
+                <img src="./assets/s1-logo-color.svg" alt="sentinel one" />
               </div>
 
             </div>
