--- a/careers.html
+++ b/careers.html
@@ -304,7 +304,7 @@
                   </p>
                 </div>
 
-                <input type="submit" value="Send Enquire" class="team__footer__form__input" />
+                <input type="submit" value="Apply Now" class="team__footer__form__input" />
               </form>
 
             </div>
