--- a/contactus.html
+++ b/contactus.html
@@ -68,8 +68,7 @@
               </h1>
 
               <p class="contacts__info__label" data-animation="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore.
+                Reach out to Five Eyes Consulting for any enquiries or to further explore what we do. Complete the form and we’ll get back to you shortly.
               </p>
 
               <!-- <canvas class="contacts__canvas"></canvas> -->
@@ -105,7 +104,7 @@
                     class="contacts__footer__form__textarea"></textarea>
                 </div>
 
-                <input type="submit" value="Send Enquire" class="contacts__footer__form__input" />
+                <input type="submit" value="Send Enquiry" class="contacts__footer__form__input" />
               </form>
 
               
