--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
               <hi class="news__title" data-animation="title">Five Eyes News</hi>
             </div>
 
-            <div class="owl-carousel owl-theme" id="news_slider">
+            <div id="news_slider_cont">
+              <div class="owl-carousel owl-theme" id="news_slider">
               <!-- 1 -->
               <div class="item">
                 <a href="./blog-post.html" class="news__grid__item">
@@ -357,6 +358,9 @@
               </div>
 
             </div>
+            </div>
+
+            
 
 
             <!-- <div class="news__grid">
