--- a/services/IT-assessment-analysis.html
+++ b/services/IT-assessment-analysis.html
@@ -78,7 +78,7 @@
                 would best suit your organisations and fulfil the requirements sought.
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes IT Assessment & Analysis?
+                Why Five Eyes?
 
               </p>
 
