--- a/services/ciso.html
+++ b/services/ciso.html
@@ -78,7 +78,7 @@
                 your information systems is secured
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes CISO / ITSA as a Service?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
