--- a/services/portfolio-programme.html
+++ b/services/portfolio-programme.html
@@ -76,7 +76,7 @@
                 Our Portfolio, Programme and Project Management service helps your organisation deliver value through the use of specific knowledge, skills, tools and techniques
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Portfolio, Programme & Project Management?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
