--- a/services/project-assurance.html
+++ b/services/project-assurance.html
@@ -76,7 +76,7 @@
                 Project Assurance services seek to provide your organisation with an independent and objective oversight of your projects ensuring they are delivering quality outputs and results aligned to best practice
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Project Assurance?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
