--- a/services/IT-architecture-design.html
+++ b/services/IT-architecture-design.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes IT Architecture & Design?
+                Why Five Eyes?
 
               </p>
 
