--- a/services/IT-solution-integration.html
+++ b/services/IT-solution-integration.html
@@ -80,7 +80,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes IT Solution Integration?
+                Why Five Eyes?
 
               </p>
 
