--- a/services/benefits-management.html
+++ b/services/benefits-management.html
@@ -79,7 +79,7 @@
                 outcomes.
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Benefits Management?
+                Why Five Eyes?
 
               </p>
 
