--- a/services/business-strategy.html
+++ b/services/business-strategy.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Business Strategy?
+                Why Five Eyes?
 
               </p>
 
