--- a/services/change-management.html
+++ b/services/change-management.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Change Management?
+                Why Five Eyes?
 
               </p>
 
