--- a/services/cloud-security.html
+++ b/services/cloud-security.html
@@ -78,7 +78,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Cloud Security?
+                Why Five Eyes?
 
               </p>
 
