--- a/services/commercial-procurement.html
+++ b/services/commercial-procurement.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Commercial & Procurement?
+                Why Five Eyes?
 
               </p>
 
