--- a/services/crisis-management-response.html
+++ b/services/crisis-management-response.html
@@ -78,7 +78,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Crisis Management & Response?
+                Why Five Eyes?
 
               </p>
 
