--- a/services/digital-forensics.html
+++ b/services/digital-forensics.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Digital Forensics?
+                Why Five Eyes?
 
               </p>
 
