--- a/services/governance.html
+++ b/services/governance.html
@@ -78,7 +78,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Governance?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
