--- a/services/hardware-technology.html
+++ b/services/hardware-technology.html
@@ -80,7 +80,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Hardware Technology?
+                Why Five Eyes?
 
               </p>
 
