--- a/services/incident-response.html
+++ b/services/incident-response.html
@@ -80,7 +80,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Incident Response?
+                Why Five Eyes?
 
               </p>
 
