--- a/services/irap.html
+++ b/services/irap.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes IRAP?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
