--- a/services/penetration-testing.html
+++ b/services/penetration-testing.html
@@ -81,7 +81,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Penetration Testing?
+                Why Five Eyes?
 
               </p>
 
