--- a/services/portfolio-programme-office.html
+++ b/services/portfolio-programme-office.html
@@ -76,7 +76,7 @@
                 PMO services helps you improve the management of your projects and programmes by standardising processes and improving efficiency
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Portfolio, Programme & Project Management Office Services?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
