--- a/services/red-blue-purple-team.html
+++ b/services/red-blue-purple-team.html
@@ -76,7 +76,7 @@
                 Our Red and Blue Team services use real world techniques to exploit weaknesses in your organisations’ processes and technologies as well as protect them by monitoring your corporate networks, conducting internal and external vulnerability scan and implementing controls
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Red, Blue & Purple Team Testing?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
