--- a/services/requirement-development.html
+++ b/services/requirement-development.html
@@ -78,7 +78,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Requirement Development?
+                Why Five Eyes?
 
               </p>
 
