--- a/services/security-analysis-review.html
+++ b/services/security-analysis-review.html
@@ -77,7 +77,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Analysis & Review (change from discovery and assessment)?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
