--- a/services/security-architecture-design.html
+++ b/services/security-architecture-design.html
@@ -76,7 +76,7 @@
                 Our Security Architecture service ensures that your software products and capabilities have been designed to be foundationally secure
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Architecture Design & Build?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
