--- a/services/security-officer.html
+++ b/services/security-officer.html
@@ -78,7 +78,7 @@
                 security professionals to guide you through your application process or assist with and DISP needs
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Officer Support Service?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
