--- a/services/security-operation-centres.html
+++ b/services/security-operation-centres.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Operation Centres?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
