--- a/services/security-risk.html
+++ b/services/security-risk.html
@@ -79,7 +79,7 @@
                 realisation of opportunities.
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Risk Management?
+                Why Five Eyes?
 
               </p>
 
