--- a/services/security-solution-integration.html
+++ b/services/security-solution-integration.html
@@ -78,7 +78,7 @@
                 such as access control and security applications into a single, comprehensive system.
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Solution Integration?
+                Why Five Eyes?
 
               </p>
 
