--- a/services/service-integration-management.html
+++ b/services/service-integration-management.html
@@ -79,7 +79,7 @@
                 business-facing IT organisation
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Service Integration & Management?
+                Why Five Eyes?
 
               </p>
 
