--- a/services/software-technology.html
+++ b/services/software-technology.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Software Technology?
+                Why Five Eyes?
 
               </p>
 
