--- a/services/technology-development-testing.html
+++ b/services/technology-development-testing.html
@@ -78,7 +78,7 @@
                 solutions into your enterprise environments
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Technology Development, Testing & Integration?
+                Why Five Eyes?
 
               </p>
 
