--- a/services/threat-intelligence.html
+++ b/services/threat-intelligence.html
@@ -79,7 +79,7 @@
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Threat Intelligence?
+                Why Five Eyes?
 
               </p>
 
