--- a/aboutus.html
+++ b/aboutus.html
@@ -404,9 +404,8 @@
 
           
 
-
           <!-- Partners slider -->
-          <section class="background">
+          <section class="background bg-white">
             <div class="services__title__wrapper">
               <hi class="services__title" data-animation="title">Partners</hi>
             </div>
@@ -417,7 +416,7 @@
               </div>
               <!-- 2 -->
               <div class="item">
-                <img src="./assets/Tanium-logo.png" alt="Tanium" />
+                <img src="./assets/Tanium.png" alt="Tanium" />
               </div>
               <!-- 3 -->
               <div class="item">
@@ -429,15 +428,15 @@
               </div>
               <!-- 5 -->
               <div class="item">
-                <img src="./assets/Amazon_Web_Services-Logo.png" alt="AWS" style="width: 60%; margin: auto;" />
+                <img src="./assets/aws.png" alt="AWS" style="width: 70%; margin: auto;" />
               </div>
               <!-- 6 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" style="width: 80%; margin: auto;" />
+                <img src="./assets/cisco.png" alt="Cisco" style="width: 70%; margin: auto;" />
               </div>
               <!-- 7 -->
               <div class="item">
-                <img src="./assets/solderOn.png" alt="solderOn" />
+                <img src="./assets/solderOn.png" alt="solderOn" style="width: 90%; margin: auto;" />
               </div>
               <!-- 8 -->
               <div class="item">
@@ -445,7 +444,7 @@
               </div>
               <!-- 9 -->
               <div class="item">
-                <img src="./assets/tenable-logo.png" alt="Tenable" />
+                <img src="./assets/Tenable_Logo.png" alt="Tenable" />
               </div>
               <!-- 10 -->
               <div class="item">
