--- a/technology.html
+++ b/technology.html
@@ -280,15 +280,15 @@
               </div>
               <!-- 5 -->
               <div class="item">
-                <img src="./assets/aws.png" alt="AWS" style="width: 50%; margin: auto;" />
+                <img src="./assets/aws.png" alt="AWS" style="width: 70%; margin: auto;" />
               </div>
               <!-- 6 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" style="width: 80%; margin: auto;" />
+                <img src="./assets/cisco.png" alt="Cisco" style="width: 70%; margin: auto;" />
               </div>
               <!-- 7 -->
               <div class="item">
-                <img src="./assets/solderOn.png" alt="solderOn" />
+                <img src="./assets/solderOn.png" alt="solderOn" style="width: 90%; margin: auto;" />
               </div>
               <!-- 8 -->
               <div class="item">
@@ -296,7 +296,7 @@
               </div>
               <!-- 9 -->
               <div class="item">
-                <img src="./assets/Tenable_Logo.jpg" alt="Tenable" />
+                <img src="./assets/Tenable_Logo.png" alt="Tenable" />
               </div>
               <!-- 10 -->
               <div class="item">
