--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/index.css" />
 </head>
 
-<body>
+<body class="home">
   <!-- <div class="preloader">
       <img
         src="./assets/mini-logo.png"
@@ -74,7 +74,7 @@
           <!-- <canvas class="home__canvas"></canvas> -->
 
           <lottie-player class="home__canvas"
-                  src="lotties/home.json" background="transparent" speed="1" loop autoplay>
+                  src="lotties/home1.json" background="transparent" speed="1" loop autoplay>
                 </lottie-player>
 
 
