--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
           <section class="all__news">
             <div class="news__info">
               <h1 class="news__info__title" data-animation="title">
-                Five eyes news
+                Five Eyes News
               </h1>
 
               <p class="news__info__label" data-animation="paragraph">
