--- a/blog-post.html
+++ b/blog-post.html
@@ -58,6 +58,10 @@
               <a href="./contactus.html" class="navigation__link">Contact Us</a>
               <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
             </div>
+
+            <a href="#." id="hamburger">
+              <i class="fa-solid fa-bars"></i>
+            </a>
         </nav>
 
         <div class="content" data-template="post">
@@ -178,9 +182,7 @@
 
 
                 <div data-animation="paragraph">
-                  <a href="https://facebook.com/" target="_blank" class="footer__label">
-                    <i class="fa-brands fa-facebook-square"></i>
-                  </a>
+                  
 
                   <a href="https://linkedin.com/" target="_blank" class="footer__label">
                     <i class="fa-brands fa-linkedin"></i>
