--- a/careers.html
+++ b/careers.html
@@ -58,6 +58,10 @@
               <a href="./contactus.html" class="navigation__link">Contact Us</a>
               <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
             </div>
+
+            <a href="#." id="hamburger">
+              <i class="fa-solid fa-bars"></i>
+            </a>
         </nav>
 
         <div class="content" data-template="careers">
