--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/index.css" />
 </head>
 
-<body class="home">
+<body class="home-page">
   <!-- <div class="preloader">
       <img
         src="./assets/mini-logo.png"
@@ -68,6 +68,10 @@
             <a href="./contactus.html" class="navigation__link">Contact Us</a>
             <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
           </div>
+
+          <a href="#." id="hamburger">
+            <i class="fa-solid fa-bars"></i>
+          </a>
         </nav>
 
         <div class="content" data-template="home">
@@ -485,9 +489,7 @@
 
 
                 <div data-animation="paragraph">
-                  <a href="https://facebook.com/" target="_blank" class="footer__label">
-                    <i class="fa-brands fa-facebook-square"></i>
-                  </a>
+                  
 
                   <a href="https://linkedin.com/" target="_blank" class="footer__label">
                     <i class="fa-brands fa-linkedin"></i>
